<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42sp"
        android:contentDescription="@string/lfimage"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/ethintpassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etconfirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_alignStart="@+id/etpassword"
        android:layout_below="@+id/etpassword"
        android:layout_marginTop="1sp"
        android:hint="@string/ethintconfirmpassword"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_alignStart="@+id/etconfirmpassword"
        android:layout_below="@+id/etconfirmpassword"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="15sp"
        android:text="@string/bSignUp" />

</RelativeLayout>